--- a/style.css
+++ b/style.css
@@ -1054,6 +1054,12 @@ button:hover {
 /* スマホ */
 /* スマホ表示時の調整 */
 /* スマホ表示時の調整 */
+@media (max-width: 767.98px) {
+  body {
+    background-attachment: scroll; /* スマホ表示では背景画像がスクロールするように */
+  }
+}
+
 @media screen and (max-width: 768px) {
 
   /* ランチメニューの背景画像設定 */
