--- a/style.css
+++ b/style.css
@@ -1105,20 +1105,21 @@ button:hover {
 }
 @media screen and (max-width: 768px) {
 
-  /* ランチメニューの背景画像設定 */
   #lunch-services .background-image {
     position: absolute;
     bottom: 30px;
     right: 5px; /* 右の余白を5pxに変更 */
     z-index: 1;
     width: calc(100% - 40px);  /* 横に40pxの余白 */
-    height: 80vh; /* 縦に100pxから1000vhを追加（合計1100vh） */
+    height: calc(80vh + 10vh); /* 80vhに10vhを追加（合計90vh） */
     background-color: rgba(255, 255, 255, 0.8); /* 白いもや（透明度を調整） */
     backdrop-filter: blur(10px); /* 背景にぼかし効果 */
     object-fit: cover;
     transform: translateX(0); /* スライドインを解除 */
     animation: none; /* アニメーションを無効化 */
+    top: 10vh; /* 上に10vh追加 */
   }
+  
 
   /* ディナーメニューの背景画像設定 */
   #dinner-services .background-image {
@@ -1127,7 +1128,7 @@ button:hover {
     left: 5px; /* 左の余白を5pxに変更 */
     z-index: 1;
     width: calc(100% - 40px);  /* 横に40pxの余白 */
-    height: 80vh; /* 縦に100pxから1000vhを追加（合計1100vh） */
+    height: 83vh; /* 縦に100pxから1000vhを追加（合計1100vh） */
     background-color: rgba(255, 255, 255, 0.8); /* 白いもや（透明度を調整） */
     backdrop-filter: blur(10px); /* 背景にぼかし効果 */
     object-fit: cover;
